--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ flutter:
     - assets/images/demoProduct.png
     - assets/images/honey1.png
     - assets/images/honeyandbees.png
+    - assets/images/home1.png
+    - assets/images/home2.png
+    - assets/images/home3.png
+    - assets/images/home4.png
 
 
   # To add assets to your application, add an assets section, like this:
