--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,10 @@ flutter:
     - assets/images/home2.png
     - assets/images/home3.png
     - assets/images/home4.png
-
+    - assets/images/honeyman3.png
+    - assets/images/couple-eating-honey.png
+    - assets/images/honeyman.png
+    - assets/images/couple-eating-honey2.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
