--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.9.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -68,6 +69,11 @@ flutter:
     - assets/images/couple-eating-honey.png
     - assets/images/honeyman.png
     - assets/images/couple-eating-honey2.png
+
+flutter_icons:
+  android: true
+  ios: true
+  image_page: "assets/images/icon.png"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
